Fix: header admin menu alignment, admin avatar size issue

--- a/assets/src/sass/components/tutor/_tutor_lms.scss
+++ b/assets/src/sass/components/tutor/_tutor_lms.scss
@@ -24,12 +24,12 @@
     border: 1px solid #1950d1;
 }
 
-.tutor-header-profile-photo img {
-    line-height: 30px;
-    max-height: 30px;
-    max-width: 30px;
-    border-radius: 50%;
-}
+// .tutor-header-profile-photo img {
+//     line-height: 30px;
+//     max-height: 30px;
+//     max-width: 30px;
+//     border-radius: 50%;
+// }
 
 .tutor-site-wrap a,
 .tutor-wrap a {
